--- a/home/wiki/App/Personal_wikis/New_wiki.html
+++ b/home/wiki/App/Personal_wikis/New_wiki.html
@@ -84,7 +84,7 @@
       <span class="mw-headline" id="Name">Name</span>
     </h2>
     <p>
-      The name is a freeform text name used to identify your wiki. Currently, it's only being used on <a href="http://xowa.org/home/wiki/Special:XowaWikiDirectory.html" id="xolnki_2" title="Special:XowaWikiDirectory">Special:XowaWikiDirectory</a>, but it will be used more elsewhere.
+      The name is a freeform text name used to identify your wiki. Currently, it's only being used on <a href="http://xowa.org/home/wiki/Special:XowaWikiDirectory.html" id="xolnki_2" title="Special:XowaWikiDirectory" class="xowa-visited">Special:XowaWikiDirectory</a>, but it will be used more elsewhere.
     </p>
     <p>
       The name only has a limitation of 255 characters or less.
