--- a/home/wiki/App/Personal_wikis/Search.html
+++ b/home/wiki/App/Personal_wikis/Search.html
@@ -45,7 +45,7 @@
         Create some pages in your wiki. For example, say you create a page called <code>Example 1</code>
       </li>
       <li>
-        From the main menu, select <code>Personal wikis</code> -&gt; <code>Personal wikis list</code>. Or go to <a href="http://xowa.org/home/wiki/Special:XowaWikiDirectory.html" id="xolnki_2" title="Special:XowaWikiDirectory">Special:XowaWikiDirectory</a>
+        From the main menu, select <code>Personal wikis</code> -&gt; <code>Personal wikis list</code>. Or go to <a href="http://xowa.org/home/wiki/Special:XowaWikiDirectory.html" id="xolnki_2" title="Special:XowaWikiDirectory" class="xowa-visited">Special:XowaWikiDirectory</a>
       </li>
       <li>
         Click the <code>wrench icon</code> next to your wiki
