--- a/home/wiki/Change_log/2013.html
+++ b/home/wiki/Change_log/2013.html
@@ -434,7 +434,7 @@
         (change) Server: Fix for Windows path {contributed by Mattze96}.
       </li>
       <li>
-        (doc) Import: Instructions for importing wikia.com wikis {contributed by Nocte Draconis}. See: <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_6" title="App/Wiki types/Wikia.com">App/Wiki_types/Wikia.com</a>
+        (doc) Import: Instructions for importing wikia.com wikis {contributed by Nocte Draconis}. See: <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_6" title="App/Wiki types/Wikia.com" class="xowa-visited">App/Wiki_types/Wikia.com</a>
       </li>
     </ul>
     <h2>
@@ -454,7 +454,7 @@
         (add) Html: Embed file name / width / height in HTML.
       </li>
       <li>
-        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server">App/Xtn/Browser/HTTP_Server</a>
+        (add) Server: Added alpha HTTP server {contributed by Mattze96 }. See: <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_8" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">App/Xtn/Browser/HTTP_Server</a>
       </li>
       <li>
         (add) Translation: Added translations for Simplified Chinese and Traditional Chinese {contributed by zjzengdongyang}. See: <a href="http://xowa.org/home/wiki/Options/Language.html" id="xolnki_9" title="Options/Language">Options/Language</a>
@@ -576,7 +576,7 @@
     </p>
     <ul>
       <li>
-        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
+        (add) Torrents for English Wikipedia images.. See <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_12" title="App/Import/English Wikipedia" class="xowa-visited">App/Import/English_Wikipedia</a> and <a href="http://xowa.org/home/wiki/Dashboard/Image_databases.html" id="xolnki_13" title="Dashboard/Image databases">Dashboard/Image_databases</a>
       </li>
       <li>
         (fix) [broken since:v0.4.4] Xnde: Incorrect parsing of xml attributes with embedded apostrophe / quote; EX:a = "b'c" -&gt; a = "bc". See: <a href="http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland" rel="nofollow" class="external free">http://en.wikisource.org/wiki/Alice's_Adventures_in_Wonderland</a>
@@ -1130,7 +1130,7 @@
     </p>
     <ul>
       <li>
-        (done) Import: Maintenance view to identify outdated wikis {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_22" title="Dashboard/Wiki maintenance" class="xowa-visited">Dashboard/Wiki_maintenance</a>
+        (done) Import: Maintenance view to identify outdated wikis {requested by hidp123}. See: <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_22" title="Dashboard/Wiki maintenance">Dashboard/Wiki_maintenance</a>
       </li>
     </ul>
     <p>
@@ -1497,7 +1497,7 @@
         (add) Wikidata: Lua Wikibase support added. See: <a href="http://xowa.org/home/wiki/Diagnostics/Scribunto/WikibaseLibrary.html" id="xolnki_34" title="Diagnostics/Scribunto/WikibaseLibrary">Diagnostics/Scribunto/WikibaseLibrary</a>
       </li>
       <li>
-        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online" class="xowa-visited">Dashboard/Import/Online</a>
+        (add) Import: Wikiquote wikis added to Import/List. See: <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_35" title="Dashboard/Import/Online">Dashboard/Import/Online</a>
       </li>
       <li>
         (fix) Import: Import failed to "read from file" if wiki.unzip was present.
