--- a/home/wiki/Change_log/v4.2.0.1702.html
+++ b/home/wiki/Change_log/v4.2.0.1702.html
@@ -33,7 +33,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaWikiItem.html" id="xolnki_2" title="Special:XowaWikiItem">Special:XowaWikiItem</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Special:XowaWikiItem.html" id="xolnki_2" title="Special:XowaWikiItem" class="xowa-visited">Special:XowaWikiItem</a>
       </dd>
     </dl>
     <p>
