--- a/home/wiki/Change_log/v4.5.0.1703.html
+++ b/home/wiki/Change_log/v4.5.0.1703.html
@@ -53,7 +53,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -99,7 +99,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_6" title="App/Full-text search">App/Full-text_search</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_6" title="App/Full-text search" class="xowa-visited">App/Full-text_search</a>
       </dd>
     </dl>
     <ul>
@@ -271,7 +271,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_11" title="App/Full-text search">App/Full-text_search</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_11" title="App/Full-text search" class="xowa-visited">App/Full-text_search</a>
       </dd>
     </dl>
   
