--- a/home/wiki/Change_log/v4.5.15.1709.html
+++ b/home/wiki/Change_log/v4.5.15.1709.html
@@ -30,7 +30,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -40,7 +40,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_3" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_3" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -60,12 +60,12 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_5" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_5" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
-    <h2>
+    <h3>
       <span class="mw-headline" id="PC">PC</span>
-    </h2>
+    </h3>
     <p>
       <b>minor</b>
     </p>
