--- a/home/wiki/Change_log/v4.5.19.1801.html
+++ b/home/wiki/Change_log/v4.5.19.1801.html
@@ -20,9 +20,9 @@
     <h2>
       <span class="mw-headline" id="v4.5.19.1801_.282018-01-05.29">v4.5.19.1801 (2018-01-05)</span>
     </h2>
-    <h2>
+    <h3>
       <span class="mw-headline" id="Wiki">Wiki</span>
-    </h2>
+    </h3>
     <ul>
       <li>
         Package: Publish 2017-12 English Wikipedia.
@@ -30,7 +30,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis">Wiki_setup/English_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis.html" id="xolnki_2" title="Wiki setup/English wikis" class="xowa-visited">Wiki_setup/English_wikis</a>
       </dd>
     </dl>
     <ul>
@@ -40,12 +40,12 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_3" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_3" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
-    <h2>
+    <h3>
       <span class="mw-headline" id="PC">PC</span>
-    </h2>
+    </h3>
     <p>
       <b>major</b>
     </p>
