--- a/home/wiki/Help/Contents.html
+++ b/home/wiki/Help/Contents.html
@@ -60,7 +60,7 @@
               <a href="http://xowa.org/home/wiki/App/Import/Simple_Wikipedia.html" id="xolnki_7" title="App/Import/Simple Wikipedia">Simple Wikipedia</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia">English Wikipedia</a>
+              <a href="http://xowa.org/home/wiki/App/Import/English_Wikipedia.html" id="xolnki_8" title="App/Import/English Wikipedia" class="xowa-visited">English Wikipedia</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Import/Other_wikis.html" id="xolnki_9" title="App/Import/Other wikis">Other wikis</a>
@@ -148,7 +148,7 @@
         <td style='width:25%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_21" title="App/Xtn/Browser/HTTP Server">HTTP Server</a>
+              <a href="http://xowa.org/home/wiki/App/Xtn/Browser/HTTP_Server.html" id="xolnki_21" title="App/Xtn/Browser/HTTP Server" class="xowa-visited">HTTP Server</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Xtn/Browser/XOWA_viewer.html" id="xolnki_22" title="App/Xtn/Browser/XOWA viewer">XOWA Viewer</a>
@@ -161,7 +161,7 @@
         <td style='width:30%'>
           <ul>
             <li>
-              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_23" title="App/Wiki types/Wikia.com">Wikia.com and other MediaWiki wikis</a>
+              <a href="http://xowa.org/home/wiki/App/Wiki_types/Wikia.com.html" id="xolnki_23" title="App/Wiki types/Wikia.com" class="xowa-visited">Wikia.com and other MediaWiki wikis</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/App/Personal_wikis.html" id="xolnki_24" title="App/Personal wikis">Personal wikis</a>
@@ -184,7 +184,7 @@
               <a href="http://xowa.org/home/wiki/Dev/Command-line.html" id="xolnki_25" title="Dev/Command-line">Overview</a>
             </li>
             <li>
-              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_26" title="Dev/Command-line/Dumps">Image dumps</a>
+              <a href="http://xowa.org/home/wiki/Dev/Command-line/Dumps.html" id="xolnki_26" title="Dev/Command-line/Dumps" class="xowa-visited">Image dumps</a>
             </li>
             <li>
               <a href="http://xowa.org/home/wiki/Dev/Command-line/Wikidata.html" id="xolnki_27" title="Dev/Command-line/Wikidata">Wikidata</a>
