--- a/home/wiki/Main_Page.html
+++ b/home/wiki/Main_Page.html
@@ -74,14 +74,14 @@
       <span class="mw-headline" id="Release_notes">Release notes</span>
     </h2>
     <p>
-      v4.5.19.1801 features the following:
+      v4.5.21.1808 features the following:
     </p>
     <ul>
       <li>
-        (Wiki) Publish 2017-12 English Wikipedia and 2017-12 German Wikipedia
+        (Wiki) Publish 2018-07 English Wikipedia
       </li>
       <li>
-        (PC) Fix multiple script errors due to Wikibase, JsonConfig, Luaj, and ParserFunctions
+        (PC) Fix multiple script errors due to Wikibase and Scribunto.
       </li>
     </ul>
     <p>
@@ -169,7 +169,7 @@
         After exploring Simple Wikipedia, you may want to import another wiki such as English Wikipedia, French Wiktionary, German Wikisource, Wikidata, Commons, etc.
       </dd>
       <dd>
-        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online" class="xowa-visited">import online</a>.
+        To import another wiki, please visit <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_11" title="Dashboard/Import/Online">import online</a>.
       </dd>
     </dl>
     <h5>
@@ -230,7 +230,7 @@
     </h2>
     <ul>
       <li>
-        v4.5.0 features full-text search for all wikis. See <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_16" title="App/Full-text search">App/Full-text_search</a>
+        v4.5.0 features full-text search for all wikis. See <a href="http://xowa.org/home/wiki/App/Full-text_search.html" id="xolnki_16" title="App/Full-text search" class="xowa-visited">App/Full-text_search</a>
       </li>
       <li>
         v4.4.0 features night-mode. See <a href="http://xowa.org/home/wiki/App/UI/Night_mode.html" id="xolnki_17" title="App/UI/Night mode">App/UI/Night_mode</a>
@@ -373,7 +373,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_39" title="Dashboard/Import/Online" class="xowa-visited">Import Online</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_39" title="Dashboard/Import/Online">Import Online</a>
         </td>
         <td>
           Import a wiki from a list of 829 known Wikimedia Foundation wikis
@@ -397,7 +397,7 @@
       </tr>
       <tr>
         <td>
-          <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_42" title="Dashboard/Wiki maintenance" class="xowa-visited">Wiki Maintenance</a>
+          <a href="http://xowa.org/home/wiki/Dashboard/Wiki_maintenance.html" id="xolnki_42" title="Dashboard/Wiki maintenance">Wiki Maintenance</a>
         </td>
         <td>
           Update your wikis if they are outdated
