--- a/home/wiki/Options/Dev.html
+++ b/home/wiki/Options/Dev.html
@@ -216,7 +216,7 @@
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.setup.previous_version")' title="reset to &quot;&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.setup.previous_version" data-xocfg-key="xowa.app.setup.previous_version" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="4.5.19.1801">
+            <input id="xowa.app.setup.previous_version" data-xocfg-key="xowa.app.setup.previous_version" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="4.5.21.1808">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.setup.previous_version__key_box' value='xowa.app.setup.previous_version'> <input type='hidden' id='xowa.app.setup.previous_version__ctx_box' value='app'>
         </div><!-- DIV:help -->
@@ -256,7 +256,7 @@
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.app.cfg.previous_grp")' title="reset to &quot;xowa.app.security&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.app.cfg.previous_grp" data-xocfg-key="xowa.app.cfg.previous_grp" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="xowa.bldr.page_sync">
+            <input id="xowa.app.cfg.previous_grp" data-xocfg-key="xowa.app.cfg.previous_grp" data-xocfg-type="string" accesskey="d" class="xocfg_data__str xocfg_data__readonly" type="text" readonly="true" value="xowa.files.general">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.app.cfg.previous_grp__key_box' value='xowa.app.cfg.previous_grp'> <input type='hidden' id='xowa.app.cfg.previous_grp__ctx_box' value='app'>
         </div><!-- DIV:help -->
@@ -342,7 +342,9 @@
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
 <textarea id="xowa.app.startup.tabs.previous_list" data-xocfg-key="xowa.app.startup.tabs.previous_list" data-xocfg-type="memo" accesskey="d" class="xocfg_data__memo xocfg_data__readonly" readonly="true">
-de.wikipedia.org/wiki/Spezial:XowaSearch?search=Negan&amp;limits=200
+en.wikipedia.org/wiki/Special:XowaSystemData?type=log_session
+home/wiki/Change_log/v4.5.21.1808
+home/wiki/Blog/2018-01
 home/wiki/Main_Page
 </textarea>
           </div><!-- HIDDEN:key,ctx -->
@@ -387,7 +389,7 @@ home/wiki/Main_Page
             <span class='xoimg_btn_x16 xoimg_list_undo' onclick='return xo.cfg_edit.delete__send("xowa.html.toggles.offline-wikis")' title="reset to &quot;y&quot;">&nbsp;</span>
           </div><!-- TEXT:val -->
           <div class='xocfg_itm_data'>
-            <input id="xowa.html.toggles.offline-wikis" data-xocfg-key="xowa.html.toggles.offline-wikis" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool xocfg_data__readonly" type="checkbox" disabled="disabled">
+            <input id="xowa.html.toggles.offline-wikis" data-xocfg-key="xowa.html.toggles.offline-wikis" data-xocfg-type="bool" accesskey="d" class="xocfg_data__bool xocfg_data__readonly" type="checkbox" disabled="disabled" checked="checked">
           </div><!-- HIDDEN:key,ctx -->
           <input type='hidden' id='xowa.html.toggles.offline-wikis__key_box' value='xowa.html.toggles.offline-wikis'> <input type='hidden' id='xowa.html.toggles.offline-wikis__ctx_box' value='app'>
         </div><!-- DIV:help -->
