--- a/home/wiki/Change_log/v4.4.0.1703.html
+++ b/home/wiki/Change_log/v4.4.0.1703.html
@@ -30,7 +30,7 @@
     </ul>
     <dl>
       <dd>
-        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_2" title="Wiki setup/German wikis">Wiki_setup/German_wikis</a>
+        <span style='font-variant:small-caps'>Links</span>: <a href="http://xowa.org/home/wiki/Wiki_setup/German_wikis.html" id="xolnki_2" title="Wiki setup/German wikis" class="xowa-visited">Wiki_setup/German_wikis</a>
       </dd>
     </dl>
     <ul>
