--- a/home/wiki/Dashboard/Wiki_maintenance.html
+++ b/home/wiki/Dashboard/Wiki_maintenance.html
@@ -126,7 +126,7 @@
           n
         </td>
         <td class='cell_center'>
-          2017-12-08
+          2018-07-07
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -161,7 +161,7 @@
           n
         </td>
         <td class='cell_center'>
-          2017-12-01
+          2018-03-01
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -230,7 +230,7 @@
           n
         </td>
         <td class='cell_center'>
-          2017-12-08
+          2018-07-10
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -255,41 +255,6 @@
         </td>
         <td class='cell_center'>
           <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("en.wikipedia.org")'>Search</button>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          fr.wikipedia.org
-        </td>
-        <td class='cell_center'>
-          y
-        </td>
-        <td class='cell_center'>
-          1969-12-31
-        </td>
-        <td class='cell_center'>
-          2017-03-20
-        </td>
-        <td class='cell_center'>
-          Dump complete
-        </td>
-        <td class='cell_center'>
-          xdat
-        </td>
-        <td class='cell_center'>
-          v1
-        </td>
-        <td class='cell_center'>
-          v2
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("fr.wikipedia.org")'>Import</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("fr.wikipedia.org")'>Category</button>
-        </td>
-        <td class='cell_center'>
-          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("fr.wikipedia.org")'>Search</button>
         </td>
       </tr>
       <tr>
@@ -334,7 +299,7 @@
           n
         </td>
         <td class='cell_center'>
-          2017-09-26
+          2018-07-01
         </td>
         <td class='cell_center'>
           2017-03-20
@@ -363,13 +328,47 @@
       </tr>
       <tr>
         <td>
+          starwars.wikia.com
+        </td>
+        <td class='cell_center'>
+          n
+        </td>
+        <td class='cell_center'>
+          2018-06-16
+        </td>
+        <td class='cell_center'>
+        </td>
+        <td class='cell_center'>
+          &lt;&lt;NULL&gt;&gt;
+        </td>
+        <td class='cell_center'>
+          sqlite3
+        </td>
+        <td class='cell_center'>
+          v0
+        </td>
+        <td class='cell_center'>
+          v1
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_wiki_import' onclick='import_wiki("starwars.wikia.com")'>Import</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_ctg_upgrade' onclick='upgrade_category("starwars.wikia.com")'>Category</button>
+        </td>
+        <td class='cell_center'>
+          <button class='options_button' id='xowa_srh_upgrade' onclick='upgrade_search("starwars.wikia.com")'>Search</button>
+        </td>
+      </tr>
+      <tr>
+        <td>
           www.wikidata.org
         </td>
         <td class='cell_center'>
           n
         </td>
         <td class='cell_center'>
-          2017-07-01
+          2018-07-10
         </td>
         <td class='cell_center'>
           2017-03-20
