--- a/home/wiki/Diagnostics/Javascript/Graph/Wikiraw.html
+++ b/home/wiki/Diagnostics/Javascript/Graph/Wikiraw.html
@@ -2,119 +2,49 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>App/Setup/System requirements - XOWA</title>
+  <title>Diagnostics/Javascript/Graph/Wikiraw - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style data-source="xowa" type="text/css">
-.console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
-  .code
-  ,.path
-  ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
-  .bold      {font-weight: 900;}
-</style>
-<style data-source="xowa" type="text/css">
-.console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
-  .code
-  ,.path
-  ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
-  .bold      {font-weight: 900;}
-</style>
-
+  
 </head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject skin-vector action-submit vector-animateLayout" spellcheck="false">
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>App/Setup/System requirements</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Diagnostics/Javascript/Graph/Wikiraw</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <div id="toc" class="toc">
-      <div id="toctitle" class="toctitle">
-        <h2>
-          Contents
-        </h2>
-      </div>
-      <ul>
-        <li class="toclevel-1 tocsection-1">
-          <a href="#Hardware"><span class="tocnumber">1</span> <span class="toctext">Hardware</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-2">
-          <a href="#Software"><span class="tocnumber">2</span> <span class="toctext">Software</span></a>
-        </li>
-      </ul>
+    <h2>
+      <span class="mw-headline" id="Airports">Airports</span>
+    </h2>
+    <ul>
+      <li>
+        From <a href="https://www.mediawiki.org/wiki/Extension:Graph/Demo/Airports" rel="nofollow" class="external free">https://www.mediawiki.org/wiki/Extension:Graph/Demo/Airports</a>
+      </li>
+      <li>
+        Only works in HTTP_Server mode
+      </li>
+      <li>
+        Uses data from: 
+        <ul>
+          <li>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph/Wikiraw/data/us-10m-json.html" id="xolnki_2" title="Diagnostics/Javascript/Graph/Wikiraw/data/us-10m-json">Diagnostics/Javascript/Graph/Wikiraw/data/us-10m-json</a>
+          </li>
+          <li>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph/Wikiraw/data/flights-airport-csv.html" id="xolnki_3" title="Diagnostics/Javascript/Graph/Wikiraw/data/flights-airport-csv">Diagnostics/Javascript/Graph/Wikiraw/data/flights-airport-csv</a>
+          </li>
+          <li>
+            <a href="http://xowa.org/home/wiki/Diagnostics/Javascript/Graph/Wikiraw/data/airports-csv.html" id="xolnki_4" title="Diagnostics/Javascript/Graph/Wikiraw/data/airports-csv">Diagnostics/Javascript/Graph/Wikiraw/data/airports-csv</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <div class='mw-graph' xo-graph-version="2">
+      { "version":2, "width": 620, "height": 430, "padding": {"top": 25, "left": 0, "right": 0, "bottom": 0}, "data": [ { "name": "states", "url": "wikiraw:///Diagnostics/Javascript/Graph/Wikiraw/data/us-10m-json", "format": {"type": "topojson", "feature": "states"}, "transform": [ { "type": "geopath", "projection": "albersUsa", "scale": 800, "translate": [300, 200] } ] }, { "name": "traffic", "url": "wikiraw:///Diagnostics/Javascript/Graph/Wikiraw/data/flights-airport-csv", "format": {"type": "csv", "parse": "auto"}, "transform": [ { "type": "aggregate", "groupby": ["origin"], "summarize": [{"field": "count", "ops": ["sum"], "as": ["flights"]}] } ] }, { "name": "airports", "url": "wikiraw:///Diagnostics/Javascript/Graph/Wikiraw/data/airports-csv", "format": {"type": "csv", "parse": "auto"}, "transform": [ { "type": "lookup", "on": "traffic", "onKey": "origin", "keys": ["iata"], "as": ["traffic"] }, { "type": "filter", "test": "datum.traffic != null" }, { "type": "geo", "projection": "albersUsa", "scale": 800, "translate": [300, 200], "lon": "longitude", "lat": "latitude" }, { "type": "filter", "test": "datum.layout_x != null &amp;&amp; datum.layout_y != null" }, { "type": "sort", "by": "-traffic.flights" }, { "type": "voronoi", "x": "layout_x", "y": "layout_y" } ] }, { "name": "routes", "url": "wikiraw:///Diagnostics/Javascript/Graph/Wikiraw/data/flights-airport-csv", "format": {"type": "csv", "parse": "auto"}, "transform": [ { "type": "filter", "test": "hover &amp;&amp; hover.iata == datum.origin" }, { "type": "lookup", "on": "airports", "onKey": "iata", "keys": ["origin", "destination"], "as": ["_source", "_target"] }, { "type": "filter", "test": "datum._source &amp;&amp; datum._target" }, { "type": "linkpath" } ] } ], "scales": [ { "name": "size", "type": "linear", "domain": {"data": "traffic", "field": "flights"}, "range": [16, 1000] } ], "signals": [ { "name": "hover", "init": null, "streams": [ {"type": "@cell:mouseover", "expr": "datum"}, {"type": "@cell:mouseout", "expr": "null"} ] }, { "name": "title", "init": "U.S. Airports, 2008", "streams": [{ "type": "hover", "expr": "hover ? hover.name + ' (' + hover.iata + ')' : 'U.S. Airports, 2008'" }] }, { "name": "cell_stroke", "init": null, "streams": [{"type": "dblclick", "expr": "cell_stroke ? null : 'brown'"}] } ], "marks": [ { "type": "path", "from": {"data": "states"}, "properties": { "enter": { "fill": {"value": "#dedede"}, "stroke": {"value": "white"} }, "update": { "path": {"field": "layout_path"} } } }, { "type": "symbol", "from": {"data": "airports"}, "properties": { "enter": { "size": {"scale": "size", "field": "traffic.flights"}, "fill": {"value": "steelblue"}, "fillOpacity": {"value": 0.8}, "stroke": {"value": "white"}, "strokeWidth": {"value": 1.5} }, "update": { "x": {"field": "layout_x"}, "y": {"field": "layout_y"} } } }, { "type": "path", "name": "cell", "from": {"data": "airports"}, "properties": { "enter": { "fill": {"value": "transparent"}, "strokeWidth": {"value": 0.35} }, "update": { "path": {"field": "layout_path"}, "stroke": {"signal": "cell_stroke"} } } }, { "type": "path", "interactive": false, "from": {"data": "routes"}, "properties": { "enter": { "path": {"field": "layout_path"}, "stroke": {"value": "black"}, "strokeOpacity": {"value": 0.35} } } }, { "type": "text", "interactive": false, "properties": { "enter": { "x": {"value": 600}, "y": {"value": 0}, "fill": {"value": "black"}, "fontSize": {"value": 20}, "align": {"value": "right"} }, "update": { "text": {"signal": "title"} } } } ] }
     </div>
-    <h2>
-      <span class="mw-headline" id="Hardware">Hardware</span>
-    </h2>
-    <ul>
-      <li>
-        CPU: 1.0 GHz minimum; 2.0 GHz recommended
-      </li>
-      <li>
-        Memory: 512 MB minimum; 2 GB recommended
-      </li>
-      <li>
-        Storage: varies per wiki. As a rough guideline, multiply the dump file by 2. For dump sizes, see either <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online">Dashboard/Import/Online</a> or <a href="http://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">http://dumps.wikimedia.org/backup-index.html</a>. 
-        <ul>
-          <li>
-            For example, for English Wikipedia, the dump size is 12 GB. 
-            <ul>
-              <li>
-                The XOWA wiki will be about 25 GB
-              </li>
-              <li>
-                The import process will need about 2 GB in temp files.
-              </li>
-              <li>
-                You should have at least 30 GB available for the text only version. Images will require at least another 80 GB.
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Software">Software</span>
-    </h2>
-    <ul>
-      <li>
-        Operating System 
-        <ul>
-          <li>
-            Windows 32 bit / 64 bit
-          </li>
-          <li>
-            Linux 32 bit / 64 bit
-          </li>
-          <li>
-            Mac OS X 32 bit / 64 bit
-          </li>
-          <li>
-            Raspberry PI (ARM)
-          </li>
-          <li>
-            Android
-          </li>
-        </ul>
-      </li>
-      <li>
-        Java 1.7+ 
-        <ul>
-          <li>
-            If Java is not installed on your machine, you can get it from <a href="http://www.java.com/en/download/manual.jsp" rel="nofollow" class="external free">http://www.java.com/en/download/manual.jsp</a>
-          </li>
-          <li>
-            If you don't want to install Java, you can copy it from an existing machine, or download a portable package. See <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_3" title="App/Setup/Flash card">App/Setup/Flash card</a>
-          </li>
-          <li>
-            On Debian Linux systems you can do <span class='console'>sudo apt-get install openjdk-7-jre</span>
-          </li>
-        </ul>
-      </li>
-    </ul>
   
     </div>
   </div>
