--- a/home/wiki/Diagnostics/Javascript/Graph/v1.html
+++ b/home/wiki/Diagnostics/Javascript/Graph/v1.html
@@ -2,119 +2,33 @@
 <html dir="ltr">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title>App/Setup/System requirements - XOWA</title>
+  <title>Diagnostics/Javascript/Graph/v1 - XOWA</title>
   <link rel="shortcut icon" href="https://gnosygnu.github.io/xowa/xowa_logo.png" />
   <link rel="stylesheet" href="https://gnosygnu.github.io/xowa/xowa_common.css" type="text/css">
-  <style data-source="xowa" type="text/css">
-.console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
-  .code
-  ,.path
-  ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
-  .bold      {font-weight: 900;}
-</style>
-<style data-source="xowa" type="text/css">
-.console   {font-family: monospace; color: #EEEEEE ; background-color: black    ; border: medium solid black;}
-  .code
-  ,.path
-  ,.url      {font-family: monospace; color: black   ; background-color: #f9f9f9  ; border: medium solid #f9f9f9;}
-  .bold      {font-weight: 900;}
-</style>
-
+  
 </head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject skin-vector action-submit vector-animateLayout" spellcheck="false">
 <div id="mw-page-base" class="noprint"></div>
 <div id="mw-head-base" class="noprint"></div>
 <div id="content" class="mw-body">
-  <h1 id="firstHeading" class="firstHeading"><span>App/Setup/System requirements</span></h1>
+  <h1 id="firstHeading" class="firstHeading"><span>Diagnostics/Javascript/Graph/v1</span></h1>
   <div id="bodyContent" class="mw-body-content">
     <div id="siteSub">From XOWA: the free, open-source, offline wiki application</div>
     <div id="contentSub"></div>
     <div id="mw-content-text" lang="en" dir="ltr" class="mw-content-ltr">
     
-    <div id="toc" class="toc">
-      <div id="toctitle" class="toctitle">
-        <h2>
-          Contents
-        </h2>
-      </div>
-      <ul>
-        <li class="toclevel-1 tocsection-1">
-          <a href="#Hardware"><span class="tocnumber">1</span> <span class="toctext">Hardware</span></a>
-        </li>
-        <li class="toclevel-1 tocsection-2">
-          <a href="#Software"><span class="tocnumber">2</span> <span class="toctext">Software</span></a>
-        </li>
-      </ul>
+    <h2>
+      <span class="mw-headline" id="Graph">Graph</span>
+    </h2>
+    <p>
+      From <a href="https://www.mediawiki.org/wiki/Extension:Graph/Demo" rel="nofollow" class="external free">https://www.mediawiki.org/wiki/Extension:Graph/Demo</a>
+    </p>
+    <p>
+      Note: modified from v2 to v1 by changing "field" from "x" to "data.x"
+    </p>
+    <div class='mw-graph' xo-graph-version="1">
+      { "version": 1, "width": 400, "height": 200, "padding": {"top": 10, "left": 30, "bottom": 30, "right": 10}, "data": [ { "name": "table", "values": [ {"x": 1, "y": 58}, {"x": 2, "y": 55}, {"x": 3, "y": 43}, {"x": 4, "y": 91}, {"x": 5, "y": 81}, {"x": 6, "y": 53}, {"x": 7, "y": 19}, {"x": 8, "y": 87}, {"x": 9, "y": 52}, {"x": 10, "y": 48}, {"x": 11, "y": 24}, {"x": 12, "y": 49}, {"x": 13, "y": 87}, {"x": 14, "y": 66}, {"x": 15, "y": 17}, {"x": 16, "y": 27}, {"x": 17, "y": 68}, {"x": 18, "y": 16}, {"x": 19, "y": 49}, {"x": 20, "y": 15} ] } ], "scales": [ { "name": "x", "type": "ordinal", "range": "width", "domain": {"data": "table", "field": "data.x"} }, { "name": "y", "range": "height", "nice": true, "domain": {"data": "table", "field": "data.y"} } ], "axes": [ {"type": "x", "scale": "x"}, {"type": "y", "scale": "y"} ], "marks": [ { "type": "rect", "from": {"data": "table"}, "properties": { "enter": { "x": {"scale": "x", "field": "data.x"}, "width": {"scale": "x", "band": true, "offset": -1}, "y": {"scale": "y", "field": "data.y"}, "y2": {"scale": "y", "value": 0} }, "update": { "fill": {"value": "steelblue"} }, "hover": { "fill": {"value": "red"} } } } ] }
     </div>
-    <h2>
-      <span class="mw-headline" id="Hardware">Hardware</span>
-    </h2>
-    <ul>
-      <li>
-        CPU: 1.0 GHz minimum; 2.0 GHz recommended
-      </li>
-      <li>
-        Memory: 512 MB minimum; 2 GB recommended
-      </li>
-      <li>
-        Storage: varies per wiki. As a rough guideline, multiply the dump file by 2. For dump sizes, see either <a href="http://xowa.org/home/wiki/Dashboard/Import/Online.html" id="xolnki_2" title="Dashboard/Import/Online">Dashboard/Import/Online</a> or <a href="http://dumps.wikimedia.org/backup-index.html" rel="nofollow" class="external free">http://dumps.wikimedia.org/backup-index.html</a>. 
-        <ul>
-          <li>
-            For example, for English Wikipedia, the dump size is 12 GB. 
-            <ul>
-              <li>
-                The XOWA wiki will be about 25 GB
-              </li>
-              <li>
-                The import process will need about 2 GB in temp files.
-              </li>
-              <li>
-                You should have at least 30 GB available for the text only version. Images will require at least another 80 GB.
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-    </ul>
-    <h2>
-      <span class="mw-headline" id="Software">Software</span>
-    </h2>
-    <ul>
-      <li>
-        Operating System 
-        <ul>
-          <li>
-            Windows 32 bit / 64 bit
-          </li>
-          <li>
-            Linux 32 bit / 64 bit
-          </li>
-          <li>
-            Mac OS X 32 bit / 64 bit
-          </li>
-          <li>
-            Raspberry PI (ARM)
-          </li>
-          <li>
-            Android
-          </li>
-        </ul>
-      </li>
-      <li>
-        Java 1.7+ 
-        <ul>
-          <li>
-            If Java is not installed on your machine, you can get it from <a href="http://www.java.com/en/download/manual.jsp" rel="nofollow" class="external free">http://www.java.com/en/download/manual.jsp</a>
-          </li>
-          <li>
-            If you don't want to install Java, you can copy it from an existing machine, or download a portable package. See <a href="http://xowa.org/home/wiki/App/Setup/Flash_card.html" id="xolnki_3" title="App/Setup/Flash card">App/Setup/Flash card</a>
-          </li>
-          <li>
-            On Debian Linux systems you can do <span class='console'>sudo apt-get install openjdk-7-jre</span>
-          </li>
-        </ul>
-      </li>
-    </ul>
   
     </div>
   </div>
