--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
 
+  <b>2018-08-06</b> 2018-07 English Wikipedia released<br/>
+  <ul>
+    <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
+    </li>
+  </ul>
+
   <b>2018-01-01</b> 2017-12 English Wikipedia and 2017-12 German Wikipedia released<br/>
   <ul>
     <li> <a href="http://xowa.org/home/wiki/Wiki_setup/English_wikis" class="external text" rel="nofollow">English Wikipedia</a>
